2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	* interpret.h (unfield): Add a call to force_string() on
	new value. See test/assignnumfield.awk. Thanks to
	Ralph Corderoy <ralph@inputplus.co.uk> for the bug report.

2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	Handle newlines in -v and fix \-<newline>. Thanks to
	Samy Mahmoudi <samy.mahmoudi@gmail.com> for the report.

	* awk.h [ELIDE_BACK_NL]: New constant.
	* awkgram.y (yylex): Disallow any physical newlines in a string
	even if escaped, in POSIX mode.
	* main.c (arg_assign): In POSIX mode disallow physical newline
	in a -v value.  Otherwise call make_str_node() with ELIDE_BACK_NL.
	* node.c (make_str_node): Handle ELIDE_BACK_NL.

2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	* array.c (cmp_strings): Preserve value of lmin so it can be passed
	to memcmp() if IGNORECASE comparison failed. Thanks to
	M. Rashid Zamani <rashid.z@gmail.com> for the report.

2018-07-27         Arnold D. Robbins     <arnold@skeeve.com>

	* re.c (make_regexp): Add warnings for unknown escape sequences,
	similar to what we already do for strings.
	* awkgram.y: Add lint warning about concatenation as target
	of `>' redirection.  Always use Op_parens so that
	print "foo" > ("foo" 1) does not warn.

2018-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	* builtin.c (format_nan_inf): New function to generate +nan, -nan,
	+inf, -inf, so that gawk output for NaN and INF always has a sign.
	Handles regular and MPFR.
	(out_of_range): New function to check if a value is out of range,
	both regular and MPFR.
	(format_tree): Use them in out of range calculation.  Check for out
	of range in floating point formats also. Allow new *undocumented*
	'P' flag to not do out of range formantting. Used mainly for
	the test program.
	* awk.h (out_of_range, format_nan_inf): Declare functions.
	* mpfr.c (mpg_format_val): Check for out of range and format the
	the result appropriately if so.