@@ -1,3 +1,8 @@
+2018-08-01         John E. Malmberg      <wb8tyw@qsl.net>
+
+        * custom.h: Include fp.h on OpenVMS.
+        Workaround for bug in math.h missing some declarations.
+
 2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* interpret.h (unfield): Add a call to force_string() on
